added lan game option